--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Dia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="/exercicio014/estilo.css"">
 </head>
 <body onload = "carregar()">
     <header>
@@ -25,7 +25,7 @@
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="/exercicio014/script.js"></script>
     
 </body>
 </html>
