--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Dia</title>
-    <link rel="stylesheet" href="/exercicio014/estilo.css"">
+    <link rel="stylesheet" href="exercicio014/estilo.css"">
 </head>
 <body onload = "carregar()">
     <header>
@@ -18,14 +18,14 @@
         </div>
 
         <div id= "foto">
-            <img id= "imagem" src="foto-manha.png" alt="foto-do-dia">
+            <img id= "imagem" src="exercicio014/foto-manha.png" alt="foto-do-dia">
         </div>
 
     </section>
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="/exercicio014/script.js"></script>
+    <script src="exercicio014/script.js"></script>
     
 </body>
 </html>
